// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CryptoTrend renders correctly for negative change 1`] = `
<svg
  className="trend-down"
  fill="none"
  height="1em"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  style={
    Object {
      "color": undefined,
    }
  }
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="23 18 13.5 8.5 8.5 13.5 1 6"
  />
  <polyline
    points="17 18 23 18 23 12"
  />
</svg>
`;

exports[`CryptoTrend renders correctly for positive change 1`] = `
<svg
  className="trend-up"
  fill="none"
  height="1em"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  style={
    Object {
      "color": undefined,
    }
  }
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="23 6 13.5 15.5 8.5 10.5 1 18"
  />
  <polyline
    points="17 6 23 6 23 12"
  />
</svg>
`;
